# QParameterWidget

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
CMake/: QtDeploy.cmake
Examples/: CMakeLists.txt  ExampleParameterWidget.cpp
Examples/Data/: GlobalParameters.json  GlobalParametersSchema.json  Parameters.json  ParametersSchema.json
Src/: CMakeLists.txt  ParameterItemDelegate.cpp  QJsonModel.cpp  QJsonModel.h  QParameterWidget.cpp  QParameterWidget.h  QParameterWidget_en.ts  QParameterWidget_zh.ts
Src/Include/QParameterWidget/: ParameterItemDelegate.h  QJsonModel.h  QParameterWidget.h  qparameterwidget_export.h
